fix open drawer button on mobile

--- a/packages/manager/src/components/Layout/layout.module.scss
+++ b/packages/manager/src/components/Layout/layout.module.scss
@@ -4,6 +4,10 @@
 .layout {
   display: flex;
   height: 100%;
+
+  @media screen and (max-width: 1023px) {
+    flex-direction: column;
+  }
 }
 
 .main {
