--- a/packages/manager/src/components/Layout/sidebar/sidebar.module.scss
+++ b/packages/manager/src/components/Layout/sidebar/sidebar.module.scss
@@ -10,9 +10,8 @@
 }
 
 .menuButton {
-  position: absolute;
-  left: 8px;
-  top: 8px;
+  margin-left: 8px;
+  margin-top: 8px;
 }
 
 .drawer > div {
